Added the Showcase section and styles.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
   <link rel="stylesheet" href="css/style.css">
   <title>Hotel CA | Welcome</title>
 </head>
+
 <body>
   <header>
     <nav id="navbar">
@@ -20,6 +22,17 @@
         </ul>
       </div>
     </nav>
+    <div id="showcase">
+      <div class="container">
+        <div class="showcase-content">
+          <h1><span class="text-primary">Enjoy</span> Your Stay</h1>
+          <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique, nesciunt aspernatur ipsum
+            modi iusto atque!</p>
+          <a class="btn" href="about.html">About Our Hotel</a>
+        </div>
+      </div>
+    </div>
   </header>
 </body>
+
 </html>
