Added Home Info section and styling

--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
       </div>
     </div>
   </header>
+  <section id="home-info" class="bg-dark">
+    <div class="info-img"></div>
+    <div class="info-content">
+      <h2><span class="text-primary">The History</span> Of Our Hotel</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ullam accusantium dicta dolore nam nostrum non
+        optio adipisci quibusdam. Necessitatibus incidunt labore sunt dolorum repellendus officiis laborum quas, ipsa
+        unde reiciendis quae harum repellat soluta totam modi a impedit eius!</p>
+      <a href="about.html" class="btn btn-light">Read More</a>
+    </div>
+  </section>
 </body>
 
 </html>
