Added the Features Section and Footer with styles.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Welcome to the most extraordinary hotel in California">
   <meta name="keywords" content="hotel, California hotel">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   <title>Hotel CA | Welcome</title>
 </head>
 
@@ -43,6 +44,28 @@
       <a href="about.html" class="btn btn-light">Read More</a>
     </div>
   </section>
+  <section id="features">
+    <div class="box bg-light">
+      <i class="fas fa-hotel fa-3x"></i>
+      <h3>Great Location</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, iusto.</p>
+    </div>
+    <div class="box bg-primary">
+      <i class="fas fa-utensils fa-3x"></i>
+
+      <h3>Free Meals</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, iusto.</p>
+    </div>
+    <div class="box bg-light">
+      <i class="fas fa-dumbbell fa-3x"></i>
+      <h3>Fitness Room</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, iusto.</p>
+    </div>
+  </section>
+  <div class="clr"></div>
+  <footer id="main-footer">
+    <p>Hotel CA &copy; 2019, All Rights Reserved</p>
+  </footer>
 </body>
 
 </html>
