Added the Testimonial Section with styling.

--- a/about.html
+++ b/about.html
@@ -27,8 +27,10 @@
     <div class="container">
       <div class="info-left">
         <h1 class="l-heading"><span class="text-primary">About</span> Hotel CA</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos quia itaque magnam quaerat! Autem odio sint sunt. Ipsum amet eum, voluptates vel quod distinctio sapiente dolores atque natus cumque veniam.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium, rerum perferendis! Nisi debitis suscipit deleniti excepturi, asperiores molestias laborum vero!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos quia itaque magnam quaerat! Autem odio sint
+          sunt. Ipsum amet eum, voluptates vel quod distinctio sapiente dolores atque natus cumque veniam.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium, rerum perferendis! Nisi debitis
+          suscipit deleniti excepturi, asperiores molestias laborum vero!</p>
       </div>
       <div class="info-right">
         <img src="./images/photo-2.jpg" alt="hotel">
@@ -36,6 +38,23 @@
     </div>
   </section>
   <div class="clr"></div>
+  <section id="testimonials" class="py-3">
+    <div class="container">
+      <h2 class="l-heading">What Our Guests Say</h2>
+      <div class="testimonial bg-primary">
+        <img src="./images/person-1.jpg" alt="Samantha">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur eius accusantium itaque magnam sit at
+          neque, esse blanditiis quia possimus quam reprehenderit nisi, autem omnis et iusto perferendis nobis quo harum
+          ex tempora nam voluptatibus. Laudantium tempora maxime quaerat necessitatibus?</p>
+      </div>
+      <div class="testimonial bg-primary">
+        <img src="./images/person-2.jpg" alt="Jessica">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur eius accusantium itaque magnam sit at
+          neque, esse blanditiis quia possimus quam reprehenderit nisi, autem omnis et iusto perferendis nobis quo harum
+          ex tempora nam voluptatibus. Laudantium tempora maxime quaerat necessitatibus?</p>
+      </div>
+    </div>
+  </section>
 
   <footer id="main-footer">
     <p>Hotel CA &copy; 2019, All Rights Reserved</p>
