Added the Contact Info section with styling.

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,23 @@
     </div>
   </section>
 
-
+  <section id="contact-info" class="bg-dark">
+    <div class="box">
+      <i class="fas fa-hotel fa-3x"></i>
+      <h3>Location</h3>
+      <p>123 Main St, Los Angeles CA</p>
+    </div>
+    <div class="box">
+      <i class="fas fa-phone fa-3x"></i>
+      <h3>Phone Number</h3>
+      <p>(213) 555-5555</p>
+    </div>
+    <div class="box">
+      <i class="fas fa-envelope fa-3x"></i>
+      <h3>Email Address</h3>
+      <p>frontdesk@hotelca.co</p>
+    </div>
+  </section>
 
   <footer id="main-footer">
     <p>Hotel CA &copy; 2019, All Rights Reserved</p>
