--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
   <meta name="description" content="Welcome to the most extraordinary hotel in California">
   <meta name="keywords" content="hotel, California hotel">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
+
   <title>Hotel CA | About</title>
 </head>
 
