--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="keywords" content="hotel, California hotel">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
+
   <title>Hotel CA | Welcome</title>
 </head>
 
